# social_feed

./: .env  Cargo.toml  README.md  Rocket.toml  development.sqlite3
migrations/2018-11-16-094753_create_users/: down.sql  up.sql
migrations/2018-11-16-100931_create_follows/: down.sql  up.sql
migrations/2018-11-16-100932_create_posts/: down.sql  up.sql
migrations/2018-11-17-041242_create_likes/: down.sql  up.sql
migrations/2018-11-17-042834_create_shares/: down.sql  up.sql
migrations/2018-11-17-044704_create_activities/: up.sql
seed/: seed.sql
sql_scripts/: seed.sql
src/: controller.rs  db.rs  follows.rs  main.rs  models.rs  repository.rs  schema.rs  views.rs
